Move projects html and remove archives for testing

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Projects - Lloyd Borres</title>
+    <title>Lloyd Borres</title>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#cc0000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,10 +22,10 @@
     />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" type="image/svg+xml" href="../../assets/site_icon.svg" />
-    <link rel="stylesheet" type="text/css" href="../../css/main.css" />
-    <link rel="stylesheet" type="text/css" href="../../css/home.css" />
-    <script src="../../js/main.js" type="text/javascript" defer></script>
+    <link rel="icon" type="image/svg+xml" href="./assets/site_icon.svg" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/home.css" />
+    <script src="./js/main.js" type="text/javascript" defer></script>
   </head>
   <body>
     <div id="root">
