--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Lloyd Borres</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./images/personal_icon.svg" />
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    <link rel="stylesheet" type="text/css" href="./css/home.css" />
+    <meta name="theme-color" content="#cc0000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="I'm a Software Engineer and my hobbies include Video Games, Anime and Filming."
     />
-    <!-- <meta property="og:image" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" /> -->
-    <title>Lloyd Borres</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Lloyd Borres" />
+    <meta
+      property="og:description"
+      content="I'm a Software Engineer and my hobbies include Video Games, Anime and Filming."
+    />
+    <meta
+      property="og:image"
+      content="https://lloydborres.com/assets/images/portfolio_thumbnail.png"
+    />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" type="image/svg+xml" href="./assets/site_icon.svg" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/home.css" />
+    <script src="./js/main.js" type="text/javascript" defer></script>
   </head>
   <body>
     <div id="root">
-      <div id="navbar" class="navbar-container">
-        <ul class="navbar-nav">
-          <li><a href="/">Home</a></li>
-          <!-- <li><a href="/">Contact</a></li> -->
-        </ul>
-        <div class="navbar-name">Lloyd Borres</div>
-        <div class="navbar-socials">
-          <a
-            href="https://github.com/lloydborres"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img alt="GitHub Profile" src="./images/github-mark.svg"
-          /></a>
-        </div>
-      </div>
-
-      <div id="content" class="content-container">
+      <nav id="main-nav"></nav>
+      <!-- Content Start -->
+      <div id="main-content" class="content-container">
         <div class="home-header-container">
           <h1>Hi, I'm Lloyd!</h1>
           <p>
@@ -49,7 +47,10 @@
             rel="noopener noreferrer"
           >
             <div class="home-featured-thumbnail-container">
-              <img alt="Portfolio" src="./images/portfolio_thumbnail.png" />
+              <img
+                alt="Portfolio"
+                src="./assets/images/portfolio_thumbnail.png"
+              />
             </div>
             <div class="home-featured-title-container">
               <div class="home-featured-title">Portfolio</div>
@@ -57,27 +58,8 @@
           </a>
         </div>
       </div>
-
-      <div id="footer" class="footer-container">
-        <p class="footer-copyright">
-          Crafted by Lloyd John Borres using pure HTML, CSS and JavaScript —
-          <a
-            href="https://github.com/lloydborres/lloydborres.github.io"
-            target="_blank"
-            rel="noopener noreferrer"
-            >View on GitHub</a
-          >
-          © 2025. All rights reserved.
-        </p>
-        <div class="footer-socials">
-          <a
-            href="https://github.com/lloydborres"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><img alt="GitHub Profile" src="./images/github-mark-white.svg"
-          /></a>
-        </div>
-      </div>
+      <!-- Content End -->
+      <footer id="main-footer"></footer>
     </div>
   </body>
 </html>
