Remove images, use storage hosting and add artworks as featured

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:image"
-      content="https://lloydborres.com/assets/images/portfolio_thumbnail.png"
+      content="https://cdn.lloydborres.com/images/thumbnails/personal_site_thumbnail.jpg"
     />
     <meta property="og:type" content="website" />
 
@@ -49,11 +49,61 @@
             <div class="home-featured-thumbnail-container">
               <img
                 alt="Portfolio"
-                src="./assets/images/portfolio_thumbnail.png"
+                src="https://cdn.lloydborres.com/images/thumbnails/portfolio_thumbnail.jpg"
               />
             </div>
             <div class="home-featured-title-container">
               <div class="home-featured-title">Portfolio</div>
+            </div>
+          </a>
+          <a
+            class="home-featured-item"
+            href="https://evangels.lloydborres.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="home-featured-thumbnail-container">
+              <img
+                alt="EvAngels"
+                src="https://cdn.lloydborres.com/images/thumbnails/evangels_site_thumbnail.jpg"
+              />
+            </div>
+            <div class="home-featured-title-container">
+              <div class="home-featured-title">EvAngels</div>
+            </div>
+          </a>
+          <a
+            class="home-featured-item"
+            href="https://www.deviantart.com/jhiichan"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="home-featured-thumbnail-container">
+              <img
+                alt="Artworks (DeviantArt)"
+                src="https://cdn.lloydborres.com/images/thumbnails/artworks_thumbnail.jpg"
+              />
+            </div>
+            <div class="home-featured-title-container">
+              <div class="home-featured-title">Artworks<br />(DeviantArt)</div>
+            </div>
+          </a>
+          <a
+            class="home-featured-item"
+            href="https://gamers-graphics.lloydborres.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="home-featured-thumbnail-container">
+              <img
+                alt="Gamers Graphics"
+                src="https://cdn.lloydborres.com/images/thumbnails/gamers_graphics_site_thumbnail.jpg"
+              />
+            </div>
+            <div class="home-featured-title-container">
+              <div class="home-featured-title">
+                Gamers Graphics<br />(Archive)
+              </div>
             </div>
           </a>
         </div>
