Use new icons and add a menu bar for mobile views

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             </div>
             <div class="home-featured-title-container">
               <div class="home-featured-title">Portfolio</div>
+              <div class="home-featured-description">
+                A website to showcase my skills and experiences built with
+                React.
+              </div>
             </div>
           </a>
           <a
@@ -70,6 +74,10 @@
             </div>
             <div class="home-featured-title-container">
               <div class="home-featured-title">EvAngels</div>
+              <div class="home-featured-description">
+                A YouTube channel to document every fun experience and compile
+                them into a single video so that I can relive those moments.
+              </div>
             </div>
           </a>
           <a
@@ -86,23 +94,8 @@
             </div>
             <div class="home-featured-title-container">
               <div class="home-featured-title">Artworks<br />(DeviantArt)</div>
-            </div>
-          </a>
-          <a
-            class="home-featured-item"
-            href="https://gamers-graphics.lloydborres.com"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <div class="home-featured-thumbnail-container">
-              <img
-                alt="Gamers Graphics"
-                src="https://cdn.lloydborres.com/images/thumbnails/gamers_graphics_site_thumbnail.jpg"
-              />
-            </div>
-            <div class="home-featured-title-container">
-              <div class="home-featured-title">
-                Gamers Graphics<br />(Archive)
+              <div class="home-featured-description">
+                My digital artworks uploaded at DeviantArt.
               </div>
             </div>
           </a>
