Add contact page and a few adjustments on index

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Projects - Lloyd Borres</title>
+    <title>Contact - Lloyd Borres</title>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="theme-color" content="#cc0000" />
@@ -12,7 +12,7 @@
     />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Projects - Lloyd Borres" />
+    <meta property="og:title" content="Contact - Lloyd Borres" />
     <meta
       property="og:description"
       content="I'm a Software Engineer and my hobbies include Video Games, Anime and Filming."
@@ -25,7 +25,7 @@
 
     <link rel="icon" type="image/svg+xml" href="./assets/site_icon.svg" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    <link rel="stylesheet" type="text/css" href="./css/home.css" />
+    <link rel="stylesheet" type="text/css" href="./css/contact.css" />
     <script src="./js/main.js" type="text/javascript" defer></script>
   </head>
   <body>
@@ -33,7 +33,31 @@
       <nav id="main-nav"></nav>
       <!-- Content Start -->
       <div id="main-content" class="content-container">
-        Projects Placeholder
+        <div class="contact-container">
+          <div class="contact-message-container">
+            <h2>Contact</h2>
+            <p>
+              Got feedback, thoughts, or just want to connect?<br />
+              Send me a message. I'd be happy to hear from you.
+            </p>
+          </div>
+          <div class="contact-list-container">
+            <div class="contact-list-item">
+              <div class="contact-list-item-icon">
+                <img alt="Email" src="./assets/icons/mail_filled.svg" />
+              </div>
+              <div class="contact-list-item-message">
+                <p>Send an email</p>
+                <a
+                  href="mailto:dev@lloydborres.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >dev@lloydborres.com</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- Content End -->
       <footer id="main-footer"></footer>
