--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Lloyd Borres</title>
     <meta charset="UTF-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="theme-color" content="#cc0000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
