--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://cdn.lloydborres.com/images/thumbnails/personal_site_thumbnail.jpg"
+      content="https://cdn.lloydborres.com/images/logo/lloydborres_logo_light_contained.svg"
     />
     <meta property="og:type" content="website" />
 
