Update cover images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://cdn.lloydborres.com/images/logo/lloydborres_logo_light_contained.svg"
+      content="https://cdn.lloydborres.com/images/covers/lloydborres_cover.svg"
     />
     <meta property="og:type" content="website" />
 
@@ -50,7 +50,7 @@
             <div class="home-featured-thumbnail-container">
               <img
                 alt="Portfolio"
-                src="https://cdn.lloydborres.com/images/thumbnails/portfolio_thumbnail.jpg"
+                src="https://cdn.lloydborres.com/images/covers/lloydborres_portfolio_cover.svg"
               />
             </div>
             <div class="home-featured-title-container">
